--- a/dashboard.html
+++ b/dashboard.html
@@ -62,7 +62,7 @@
                   <h1>Entrada</h1>
                 </div>
                 <div class="card-body card-totais">
-                  <h1 id="entrada">0</h1>
+                  <h1 id="totalprodutos">0</h1>
                 </div>
              </div>
            </div>
@@ -72,16 +72,8 @@
                 <h1>Saída</h1>
               </div>
               <div class="card-body card-totais">
-                <h1 id="saida">0</h1>
+                <h1 id="totalusuarios">0</h1>
               </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <div class="card-header" align="center">
-                    <h1>Saldo</h1>
-                  </div>
-                  <div class="card-body card-totais">
-                    <h1 id="saldo">0</h1>
-                  </div>
            </div>
            </div>
            <div class="col-md-4"></div>
